--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,28 @@
-# Ignore node_modules directory
-node_modules/
-
-# Ignore compiled files
+# Logs
+logs
 *.log
-*.zip
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore editor-specific files
-.vscode/
-.idea/
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
